# easyRemovalBackground

./: .gitignore  CMakeLists.txt  README.md  main_segment.cpp
include/: app.h
include/algo/detect/: onnx_base.h
include/algo/matting/: inference_mat.h
include/interface/segment/: mainwindow.h
include/utils/: logger.h  util.h
src/: CMakeLists.txt  app.cpp
src/algo/detect/: onnx_base.cpp
src/algo/matting/: inference_mat.cpp
src/interface/segment/: mainwindow.cpp
src/utils/: logger.cpp  util.cpp
